force-app/main/default/objects/Lost_Countermeasure__c/Lost_Countermeasure__c.object-meta.xml
<CustomObject>
    <label>Lost Countermeasure</label>
    <nameField>
        <label>Lost Countermeasure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lost Countermeasures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>