force-app/main/default/objects/Lost_Countermeasure__c/fields/Action_Item__c.field-meta.xml
<CustomField>
    <fullName>Action_Item__c</fullName>
    <label>Action Item</label>
    <type>TextArea</type>
</CustomField>