force-app/main/default/objects/Lost_Countermeasure__c/fields/ActionItem_1__c.field-meta.xml
<CustomField>
    <fullName>ActionItem_1__c</fullName>
    <label>Action Item 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>