force-app/main/default/objects/Lost_Countermeasure__c/fields/ActionItem_1_InChargeDept__c.field-meta.xml
<CustomField>
    <fullName>ActionItem_1_InChargeDept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Item 1 In Charge Dept</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Lost Countermeasures (Action Item 1 InChargeDept)</relationshipLabel>
    <relationshipName>Lost_Countermeasures2</relationshipName>
    <type>Lookup</type>
</CustomField>