force-app/main/default/objects/Lost_Countermeasure__c/fields/ActionItem_1_RelavantDept__c.field-meta.xml
<CustomField>
    <fullName>ActionItem_1_RelavantDept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Item 1 Relavant Dept</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Lost Countermeasures (Action Item 1 RelavantDept)</relationshipLabel>
    <relationshipName>Lost_Countermeasures3</relationshipName>
    <type>Lookup</type>
</CustomField>