force-app/main/default/objects/Lost_Countermeasure__c/fields/ActionItem_2__c.field-meta.xml
<CustomField>
    <fullName>ActionItem_2__c</fullName>
    <label>Action Item 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>