force-app/main/default/objects/Lost_Countermeasure__c/fields/ActionItem_2_InChargeDept__c.field-meta.xml
<CustomField>
    <fullName>ActionItem_2_InChargeDept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Item 2 In Charge Dept</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Lost Countermeasures (Action Item 2 InChargeDept)</relationshipLabel>
    <relationshipName>Lost_Countermeasures4</relationshipName>
    <type>Lookup</type>
</CustomField>