force-app/main/default/objects/Lost_Countermeasure__c/fields/ActionItem_2_RelavantDept__c.field-meta.xml
<CustomField>
    <fullName>ActionItem_2_RelavantDept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Item 2 Relavant Dept</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Lost Countermeasures (Action Item 2 RelavantDept)</relationshipLabel>
    <relationshipName>Lost_Countermeasures5</relationshipName>
    <type>Lookup</type>
</CustomField>