force-app/main/default/objects/Lost_Countermeasure__c/fields/ActionItem_3__c.field-meta.xml
<CustomField>
    <fullName>ActionItem_3__c</fullName>
    <label>Action Item 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>