force-app/main/default/objects/Lost_Countermeasure__c/fields/ActionItem_3_RelavantDept__c.field-meta.xml
<CustomField>
    <fullName>ActionItem_3_RelavantDept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Item 3 Relavant Dept</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Lost Countermeasures (Action Item 3 RelavantDept)</relationshipLabel>
    <relationshipName>Lost_Countermeasures7</relationshipName>
    <type>Lookup</type>
</CustomField>