force-app/main/default/objects/Lost_Countermeasure__c/fields/Countermeasures__c.field-meta.xml
<CustomField>
    <fullName>Countermeasures__c</fullName>
    <label>Countermeasures</label>
    <type>TextArea</type>
</CustomField>