force-app/main/default/objects/Lost_Countermeasure__c/fields/DetailReason__c.field-meta.xml
<CustomField>
    <fullName>DetailReason__c</fullName>
    <label>Detail Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>