force-app/main/default/objects/Lost_Countermeasure__c/fields/Improve_InChargeDept__c.field-meta.xml
<CustomField>
    <fullName>Improve_InChargeDept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Improvement In Charge Dept</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Lost Countermeasures (Improvement InChargeDept)</relationshipLabel>
    <relationshipName>Lost_Countermeasures</relationshipName>
    <type>Lookup</type>
</CustomField>