force-app/main/default/objects/Lost_Countermeasure__c/fields/Improve_RelavantDept__c.field-meta.xml
<CustomField>
    <fullName>Improve_RelavantDept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Improvement Relavant Dept</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Lost Countermeasures (Improvement RelavantDept)</relationshipLabel>
    <relationshipName>Lost_Countermeasures1</relationshipName>
    <type>Lookup</type>
</CustomField>