force-app/main/default/objects/Lost_Countermeasure__c/fields/Improvement__c.field-meta.xml
<CustomField>
    <fullName>Improvement__c</fullName>
    <label>Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>