force-app/main/default/objects/Lost_Countermeasure__c/fields/LostActivity__c.field-meta.xml
<CustomField>
    <fullName>LostActivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lost Activity</label>
    <referenceTo>Opportunity_Activity__c</referenceTo>
    <relationshipLabel>Lost Countermeasures</relationshipLabel>
    <relationshipName>Lost_Countermeasures</relationshipName>
    <type>Lookup</type>
</CustomField>