force-app/main/default/objects/Lost_Countermeasure__c/fields/LostReason__c.field-meta.xml
<CustomField>
    <fullName>LostReason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lost Reason</label>
    <referenceTo>LostResult__c</referenceTo>
    <relationshipLabel>Lost Countermeasures</relationshipLabel>
    <relationshipName>Lost_Countermeasures</relationshipName>
    <type>Lookup</type>
</CustomField>