force-app/main/default/objects/Lost_Countermeasure__c/fields/LostReason_Type__c.field-meta.xml
<CustomField>
    <fullName>LostReason_Type__c</fullName>
    <label>Lost Reason Type Code</label>
    <type>TextArea</type>
</CustomField>