force-app/main/default/objects/Lost_Countermeasure__c/fields/ManagementDeptCode__c.field-meta.xml
<CustomField>
    <fullName>ManagementDeptCode__c</fullName>
    <formula>Managing_Department__r.CostCenter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ManagementDeptCode</label>
    <type>Text</type>
</CustomField>