force-app/main/default/objects/Lost_Countermeasure__c/fields/Managing_Department__c.field-meta.xml
<CustomField>
    <fullName>Managing_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managing Department</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Lost Countermeasures</relationshipLabel>
    <relationshipName>Lost_Countermeasures</relationshipName>
    <type>Lookup</type>
</CustomField>