force-app/main/default/objects/Lost_Countermeasure__c/fields/Master_Lost_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Master_Lost_Type_Code__c</fullName>
    <label>Master Lost Type Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>