force-app/main/default/objects/Lost_Countermeasure__c/fields/Master_LostType__c.field-meta.xml
<CustomField>
    <fullName>Master_LostType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master LostType</label>
    <referenceTo>Master_LostType__c</referenceTo>
    <relationshipLabel>Lost Countermeasures</relationshipLabel>
    <relationshipName>Lost_Countermeasures</relationshipName>
    <type>Lookup</type>
</CustomField>