force-app/main/default/objects/Lost_Countermeasure__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Lost Countermeasures</relationshipLabel>
    <relationshipName>Lost_Countermeasures</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>