force-app/main/default/objects/Lost_Countermeasure__c/listViews/New.listView-meta.xml
<ListView>
    <fullName>New</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>LostActivity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
        <value>Lost Enhancement Test ii</value>
    </filters>
    <label>New</label>
</ListView>